--- a/index.html
+++ b/index.html
@@ -567,28 +567,17 @@
     <div class="container text-center">
 		<p>科技公司 版权所有 © 2016-2017</p>
 
-		<div class="powered_by_metinfo">Powered&nbsp;by&nbsp;&nbsp;</div>
+		<div class="">Powered&nbsp;by&nbsp;&nbsp;</div>
 
     </div>
-</footer><br><br><br><br>
-	<script>
-
-		
+</footer>
+	<script>		
 		$('img').attr('data-scroll-reveal', 'enter bottom and move 50px over 1s');
 		$('i').attr('data-scroll-reveal', 'enter bottom and move 50px over 1s');
 		$('.media-right').attr('data-scroll-reveal', 'enter bottom and move 50px over 1s');
-			
-		//$('.animation-slide-bottom').addClass('animated bounceInUp');//fadeInLeft bounceInRight
-		//$('.animation-slide-bottom2').addClass('animated bounceInDown');//fadeInLeft bounceInRight
-
+	
 		window.scrollReveal = new scrollReveal({reset: true});
 
-		//  $(window).scroll(function(event){
-		// $('.container h2').addClass('animated rubberBand');//fadeInLeft bounceInRight
-		
-
-
-  //   });
 	</script>
 
     <script>
