--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 						</a>
 					</div>
 					<div class="media-right">
-						<h4>Oculus在伦敦组建VR团队</h4>
+						<h4 style='margin-top:0px;'>Oculus在伦敦组建VR团队</h4>
 						<p class='textp'>自从2014年斥资20亿美元收购Oculus以来，Facebook作为社交平台巨头一直在VR发展的前沿。而随着市场发展，VR在美国和中国等地刮起狂潮。Facebook准备扩大疆域，向英国瞄准。根...</p>
 						<p class="info">
 							<span>2017-01-14</span>
@@ -263,7 +263,7 @@
 						</a>
 					</div>
 					<div class="media-right">
-						<h4>Oculus在伦敦组建VR团队</h4>
+						<h4 style='margin-top:0px;'>Oculus在伦敦组建VR团队</h4>
 						<p class='textp'>自从2014年斥资20亿美元收购Oculus以来，Facebook作为社交平台巨头一直在VR发展的前沿。而随着市场发展，VR在美国和中国等地刮起狂潮。Facebook准备扩大疆域，向英国瞄准。根...</p>
 						<p class="info">
 							<span>2017-01-14</span>
@@ -282,7 +282,7 @@
 						</a>
 					</div>
 					<div class="media-right">
-						<h4>Chrome OS支持所有安卓应用</h4>
+						<h4 style='margin-top:0px;'>Chrome OS支持所有安卓应用</h4>
 						<p class='textp'>“Google Play商店马上就要登陆Chrome OS了”谷歌公司在今天的开发者大会上宣布。然后大家就可以在自己的</p>
 						<p class="info">
 							<span>2017-01-14</span>
@@ -298,7 +298,7 @@
 						</a>
 					</div>
 					<div class="media-right">
-						<h4>Chrome OS支持所有安卓应用</h4>
+						<h4 style='margin-top:0px;'>Chrome OS支持所有安卓应用</h4>
 						<p class='textp'>“Google Play商店马上就要登陆Chrome OS了”谷歌公司在今天的开发者大会上宣布。然后大家就可以在自己的</p>
 						<p class="info">
 							<span>2017-01-14</span>
@@ -317,7 +317,7 @@
 						</a>
 					</div>
 					<div class="media-right">
-						<h4>人工智能风口来袭 情感机器人众望所归</h4>
+						<h4 style='margin-top:0px;'>人工智能风口来袭 情感机器人众望所归</h4>
 						<p class='textp'>近日，习近平在中科大“检阅”了多款人工智能机器人，Gowild智能科技公司开发的全球首款情感社交机器人“公子小白”激萌可爱，分外抢眼。据悉，受“检阅”的人工智能机器人的开发者包括科大讯飞、Gowild...</p>
 						<p class="info">
 							<span>2017-01-14</span>
@@ -333,7 +333,7 @@
 						</a>
 					</div>
 					<div class="media-right">
-						<h4>人工智能风口来袭 情感机器人众望所归</h4>
+						<h4 style='margin-top:0px;'>人工智能风口来袭 情感机器人众望所归</h4>
 						<p class='textp'>近日，习近平在中科大“检阅”了多款人工智能机器人，Gowild智能科技公司开发的全球首款情感社交机器人“公子小白”激萌可爱，分外抢眼。据悉，受“检阅”的人工智能机器人的开发者包括科大讯飞、Gowild...</p>
 						<p class="info">
 							<span>2017-01-14</span>
@@ -438,6 +438,8 @@
     }
     
      $('#myTab li:eq(0) a').tab('show').siblings();
+
+
     </script>
 </body>
 </html>
