--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
 		<div class="powered_by_metinfo">Powered&nbsp;by&nbsp;&nbsp;</div>
 
     </div>
-</footer><br><br><br><br>
+</footer>
 	<script>
 
 		
